manifest/objects/ALTF__Insight_Card_Edge__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Card__c</fullName>
        <label>Insight Card</label>
        <referenceTo>ALTF__Insight_Card__c</referenceTo>
        <relationshipLabel>Insight Card Edges</relationshipLabel>
        <relationshipName>Insight_Node_Edges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Section__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Altify Topic</label>
        <referenceTo>ALTF__Insight_Section__c</referenceTo>
        <relationshipLabel>Insight Card Edges</relationshipLabel>
        <relationshipName>Insight_Node_Edges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Solution_Insight_Card__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Solution Insight Node</label>
        <referenceTo>ALTF__Insight_Card__c</referenceTo>
        <relationshipLabel>Insight Card Edges (Solution Insight Card)</relationshipLabel>
        <relationshipName>Insight_Card_Edges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Altify Insight Card Edge</label>
    <nameField>
        <label>Insight Node Edge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Insight Card Edges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>